data/derived/sp14/progs/unify/prog1940.ml.out
Characters 135-136:
  if y = 2 then y;;
                ^
Error: This expression has type int but an expression was expected of type
         unit
